@@ -1,10 +1,9 @@
 /* Copyright 2004, Sam Reid */
 package edu.colorado.phet.waveinterference;
 
+import edu.colorado.phet.waveinterference.util.WISwingUtil;
 import edu.colorado.phet.waveinterference.view.RotationWaveGraphic;
 import edu.colorado.phet.waveinterference.view.WaveRotateControl;
-
-import java.awt.*;
 
 /**
  * User: Sam Reid
@@ -29,18 +28,12 @@ public class WaveRotateControl3D extends WaveRotateControl {
     }
 
     private void update() {
-        setEnabled( this, model.isSymmetric() );
-//        System.out.println( "model.isSymmetric() = " + model.isSymmetric() );
+        setEnabled( model.isSymmetric() );
     }
 
-    public void setEnabled( Component c, boolean enabled ) {
-        c.setEnabled( enabled );
-        if( c instanceof Container ) {
-            Container c2 = (Container)c;
-            for( int i = 0; i < c2.getComponentCount(); i++ ) {
-                Component a = c2.getComponent( i );
-                setEnabled( a, enabled );
-            }
-        }
+    public void setEnabled( boolean enabled ) {
+        super.setEnabled( enabled );
+        WISwingUtil.setChildrenEnabled( this, enabled );
     }
+
 }
